--- a/Game_past/css/Game_past.css
+++ b/Game_past/css/Game_past.css
@@ -116,9 +116,8 @@ body {
     0%,
     100% { bottom: 28px; }
     45%,
-    55% { bottom: 200px; }
+    55% { bottom: 180px; }
 }
-
 
 #container #block {
     height: 28px;
@@ -138,6 +137,29 @@ body {
 }
 
 @keyframes blockAnimate {
+    0% { right: -125px; }
+    100% { right: 100%; }
+}
+
+#container #monster {
+    height: 50px;
+    width: 50px;
+    position: absolute;
+    bottom: 70px;
+    right: -20px;
+    opacity: 0;
+}
+
+#container #monster img {
+    height: 50px;
+    width: 50px;
+}
+
+.monsterActive {
+    animation: blockAnimate 6s linear infinite;
+}
+
+@keyframes monsterAnimate {
     0% { right: -125px; }
     100% { right: 100%; }
 }
@@ -164,7 +186,6 @@ body {
     100% { right: 100%; }
 }
 
-
 #score {
     height: auto;
     width: auto;
@@ -183,3 +204,20 @@ body {
     height: 80px;
     color: #525252;
 }
+
+#container #exclamation {
+    z-index: 10;
+    height: 50px;
+    width: 50px;
+    position: absolute;
+    left: 100px; 
+    bottom: 100px;
+    display: none; 
+}
+
+#container #exclamation img {
+    height: 50px;
+    width: 50px;
+}
+
+
