--- a/Game_past/css/Game_past.css
+++ b/Game_past/css/Game_past.css
@@ -133,7 +133,7 @@ body {
 }
 
 .blockActive {
-    animation: blockAnimate 3s linear infinite;
+    animation: blockAnimate 5s linear infinite;
 }
 
 @keyframes blockAnimate {
@@ -239,6 +239,65 @@ body {
 #container #exclamation img {
     height: 50px;
     width: 50px;
+}
+
+
+
+.characterActive {
+    animation: parabolicJump 2s cubic-bezier(0.25, 1, 0.5, 1);
+}
+
+@keyframes parabolicJump {
+    0%, 100% {
+        transform: translateY(0);
+    }
+    25% {
+        transform: translateY(-200px);  /* 점프의 최대 높이 */
+    }
+    50% {
+        transform: translateY(0);
+    }
+}
+
+
+#loadingIndicator {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.8);
+    z-index: 1000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loader {
+    border: 5px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 5px solid #3498db;
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+@keyframes flash {
+    0%, 100% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0.5;
+    }
+}
+
+.flashEffect {
+    animation: flash 0.2s linear infinite;
 }
 
 
