--- a/Game_future/css/Game_future.css
+++ b/Game_future/css/Game_future.css
@@ -13,7 +13,7 @@ body {
 
 #container {
     height: 400px;
-    width: 1200px;
+    width: 1600px;
     position: relative;
     overflow: hidden;
 }
@@ -60,14 +60,14 @@ body {
 
 #container #road {
     height: 400px;
-    width: 3000px;
+    width: 4150px;
     position: absolute;
     bottom: 0;
 }
 
 #container #road img {
     height: 400px;
-    width: 3300px;
+    width: 4396px;
     position: absolute;
     left: 0px;
     animation: none;
@@ -92,7 +92,7 @@ body {
 
 /* red flash class */
 .redFlash {
-    filter: hue-rotate(-360deg) saturate(200%);
+    filter: hue-rotate(160deg) saturate(220%);
 }
 
 #container #character {
@@ -116,28 +116,50 @@ body {
     0%,
     100% { bottom: 28px; }
     45%,
-    55% { bottom: 200px; }
+    55% { bottom: 180px; }
 }
-
 
 #container #block {
     height: 28px;
     width: 50px;
     position: absolute;
-    bottom: 70px;
+    bottom: 90px;
     right: -20px;
 }
 
 #container #block img {
-    height: 28px;
-    width: 50px;
+    height: 70px;
+    width: 100px;
 }
 
 .blockActive {
-    animation: blockAnimate 3s linear infinite;
+    animation: blockAnimate 7s linear infinite;
 }
 
 @keyframes blockAnimate {
+    0% { right: -125px; }
+    100% { right: 100%; }
+}
+
+#container #monster {
+    height: 50px;
+    width: 50px;
+    position: absolute;
+    bottom: 70px;
+    right: -20px;
+    opacity: 0;
+}
+
+#container #monster img {
+    height: 50px;
+    width: 50px;
+}
+
+.monsterActive {
+    animation: blockAnimate 20s linear infinite;
+}
+
+@keyframes monsterAnimate {
     0% { right: -125px; }
     100% { right: 100%; }
 }
@@ -164,13 +186,12 @@ body {
     100% { right: 100%; }
 }
 
-
 #score {
     height: auto;
     width: auto;
     position: absolute;
-    top: 20px;
-    right: 20px;
+    top: 15px; 
+    right: 120px;
 }
 
 #gameOver {
@@ -182,4 +203,84 @@ body {
     width: 362px;
     height: 80px;
     color: #525252;
+}
+
+#gameclear {
+    z-index: 10;
+    display: none;
+    font-size: 70px;
+    position: absolute;
+    top:40px;
+    left:500px;
+    width: 362px;
+    height: 80px;
+    color: #525252;
+}
+
+#container #exclamation {
+    z-index: 10;
+    height: 50px;
+    width: 50px;
+    position: absolute;
+    left: 100px; 
+    bottom: 100px;
+    display: none; 
+}
+
+#container #exclamation img {
+    height: 50px;
+    width: 50px;
+}
+
+#container #plus {
+    z-index: 10;
+    height: 50px;
+    width: 50px;
+    position: absolute;
+    left: 150px; 
+    bottom:280px;
+    display: none; 
+}
+
+#container #plus img {
+    height: 50px;
+    width: 50px;
+}
+
+.characterActive {
+    animation: parabolicJump 2s cubic-bezier(0.25, 1, 0.5, 1);
+}
+
+@keyframes parabolicJump {
+    0%, 100% {
+        transform: translateY(0);
+    }
+    25% {
+        transform: translateY(-150px);  /* 점프의 최대 높이 */
+    }
+    50% {
+        transform: translateY(0);
+    }
+}
+
+#loadingIndicator {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.8);
+    z-index: 1000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loading{
+    width:500px;
+    height:auto;
+    justify-content: center;
+    align-items: center;
+    margin-left:500px;
+    margin-top: 200px;
 }
